Fix alignment of checkbox label in feedback dialog

--- a/resources/src/mediawiki/mediawiki.feedback.css
+++ b/resources/src/mediawiki/mediawiki.feedback.css
@@ -13,6 +13,10 @@
 	line-height: 1.4;
 }
 
+.mw-feedbackDialog-feedback-terms p:first-child {
+	margin-top: 0;
+}
+
 .mw-feedbackDialog-welcome-message {
 	margin-bottom: 1em;
 }
